--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -62,6 +62,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "glob": "^11.0.0",
     "globals": "^15.9.0",
     "immer": "^10.1.1",
     "prettier": "^3.0.3",
