--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -87,6 +87,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "diff2html": "3.4.22",
+    "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.1.5",
     "fast-diff": "^1.3.0",
     "highlight.js": "^11.9.0",
