--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -60,6 +60,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.1",
+    "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
